// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth reducers: 'LOGIN_SUCCESS'  1`] = `
Immutable.Map {
  "authenticated": true,
}
`;

exports[`auth reducers: 'LOGOUT_SUCCESS'  1`] = `
Immutable.Map {
  "authenticated": false,
}
`;

exports[`auth reducers: 'SIGNUP_SUCCESS'  1`] = `
Immutable.Map {
  "authenticated": true,
}
`;

exports[`auth reducers: 'default '  1`] = `
Immutable.Map {
  "authenticated": false,
}
`;
